# ash

./: .gitignore  CMakeLists.txt  README.md
include/: builtin.h  command.h  consts.h  evaluate.h  jobs.h  parse.h  signals.h
src/: builtin.c  command.c  evaluate.c  jobs.c  main.c  parse.c  signals.c
